WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240761
REGRESSION (
r290124
): Unable to insert decimal point when typing in a number text field in QQ app
https://bugs.webkit.org/show_bug.cgi?id=240761
Summary
REGRESSION (r290124): Unable to insert decimal point when typing in a number ...
Wenson Hsieh
Reported
2022-05-21 12:05:12 PDT
rdar://91882650
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2022-05-21 12:52:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/883
EWS
Comment 2
2022-05-21 16:41:02 PDT
Committed
r294617
(
250843@main
): <
https://commits.webkit.org/250843@main
> Reviewed commits have been landed. Closing PR #883 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug